--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div class="parte-um">
 
 <div class="parte-dois">
-<img id="" src="">
+<img id="imagem" src="luthier.jpg">
 <b> <p> Somos os Melhores</p></b>
 </div class="parte-dois">
 
