--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <div class="parte-um">
-<h1> <p class="ini"> Aula Primeiro Ano </p class="ini"></h1>
+<h1> <p class="ini"> Luthieria 
+                       Rocha </p class="ini"></h1>
    
 <body>
    
