--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <head>
     <meta charset="utf-8">
-    <title> Nosso Grupo </title>
+    <title> Luthieria Rocha </title>
     <link rel="stylesheet" href="style.css">
   </head>
 <div class="parte-um">
