--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <body>
 <head>
     <meta charset="utf-8">
-    <title> Luthieria Rocha </title>
+    <title> Luthier Shop </title>
     <link rel="stylesheet" href="style.css">
   </head>
 <div class="parte-um">
-<h1> <p class="ini"> Luthieria 
-                       Rocha </p class="ini"></h1>
+<h1> <p class="ini"> Luthierr
+                       Shop </p class="ini"></h1>
    
 <body>
    
