--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <div class="parte-um">
-<h1> <p class="ini"> Luthierr
+<h1> <p class="ini"> Luthier
                        Shop </p class="ini"></h1>
    
 <body>
