--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <div class="parte-três">
 <h3> Sempre melhorando </h3><ol>
-    <li> Aprendendo sempre</li>
-    <li> Aperfeiçoando a Programação</li>
-    <li> Melhorando nossa educação </li></ol>
+    <li>Novos instrumentos</li>
+    <li> Aperfeiçoando nossa loja</li>
+    <li> Melhorando nossos materiais </li></ol>
 
     <i> Junte-se a nós </i>
 </div class="parte-três">
