--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <li> Melhorando nossos materiais </li></ol>
 
     <i> Junte-se a nós </i>
+    <p> Temos instrumentos de cordas com</p>
+    <p>vários modelos e formas.</p>
+
 </div class="parte-três">
 
 </body>
