--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <li> Melhorando nossos materiais </li></ol>
 
     <i> Junte-se a nós </i>
-    <p> Temos instrumentos de cordas com</p>
-    <p>vários modelos e formas.</p>
+    <p> Temos instrumentos de cordas com vários modelos e formas.</p>
+    
 
 </div class="parte-três">
 
